force-app/main/default/objects/Message__c/Message__c.object-meta.xml
<CustomObject>
    <description>All messages for users of the mobile Donor app</description>
    <label>Message</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>