force-app/main/default/objects/Message__c/fields/Campaign_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Id__c</fullName>
    <description>Related Campaign Member Id for message; used for determining incentive (promotion) payment linkages. NOTE: using text field, because Campaign Member lookups aren&apos;t available in Salesforce.</description>
    <inlineHelpText>Related Campaign Member Id for message; used for determining incentive (promotion) payment linkages.</inlineHelpText>
    <label>Campaign Member Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>