force-app/main/default/objects/Message__c/fields/Center__c.field-meta.xml
<CustomField>
    <fullName>Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the Center, specifically for Center related broadcast (or other) messages, to show what messages where emitted from a Center.</description>
    <inlineHelpText>Indicates the Center, specifically for Center related broadcast (or other) messages, to show what messages where emitted from a Center.</inlineHelpText>
    <label>Center</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Center Messages</relationshipLabel>
    <relationshipName>CenterMessages</relationshipName>
    <type>Lookup</type>
</CustomField>