force-app/main/default/objects/Message__c/fields/Donor_Loyalty_Level_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Loyalty_Level_Name__c</fullName>
    <description>Indicates the Donor&apos;s Loyalty Level Name; used for Messaging.</description>
    <formula>Donor__r.Loyalty_Level__r.Name</formula>
    <inlineHelpText>Indicates the Donor&apos;s Loyalty Level Name; used for Messaging.</inlineHelpText>
    <label>Donor Loyalty Level Name</label>
    <type>Text</type>
</CustomField>