force-app/main/default/objects/Message__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Indicates the date the message will expire.</description>
    <inlineHelpText>Indicates the date the message will expire.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>