force-app/main/default/objects/Message__c/fields/Fire_Promotional_Payment__c.field-meta.xml
<CustomField>
    <fullName>Fire_Promotional_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Message is related to a promotional payment (and thus triggers this).</description>
    <inlineHelpText>Indicates if Message is related to a promotional payment (and thus triggers this).</inlineHelpText>
    <label>Fire Promotional Payment</label>
    <type>Checkbox</type>
</CustomField>