force-app/main/default/objects/Message__c/fields/isViewed__c.field-meta.xml
<CustomField>
    <fullName>isViewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the recipient viewed this message?</description>
    <label>is Viewed</label>
    <type>Checkbox</type>
</CustomField>