force-app/main/default/objects/Message__c/fields/Message_Handler_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Handler_Type__c</fullName>
    <description>For system use only - indicates how to route the message, namely from data operations executed from Marketing Cloud.</description>
    <inlineHelpText>For system use only - indicates how to route the message, namely from data operations executed from Marketing Cloud.</inlineHelpText>
    <label>Message Handler Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>