force-app/main/default/objects/Message__c/fields/Scheduled_Send_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Send_Time__c</fullName>
    <description>Used when a message is set to be scheduled to be sent at a certain point in time.</description>
    <inlineHelpText>Used when a message is set to be scheduled to be sent at a certain point in time.</inlineHelpText>
    <label>Scheduled Send Time</label>
    <type>DateTime</type>
</CustomField>