force-app/main/default/objects/Message__c/fields/Transaction_Dollar_Amount__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Dollar_Amount__c</fullName>
    <description>Indicates the dollar amount of the related transaction, if applicable.</description>
    <formula>Transaction__r.Amount_Currency__c</formula>
    <inlineHelpText>Indicates the dollar amount of the related transaction, if applicable.</inlineHelpText>
    <label>Transaction Dollar Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>