force-app/main/default/objects/Message__c/fields/Transaction_Point_Amount__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Point_Amount__c</fullName>
    <description>Indicates the point amount of the related transaction, if applicable.</description>
    <formula>Transaction__r.Amount_Points__c</formula>
    <inlineHelpText>Indicates the point amount of the related transaction, if applicable.</inlineHelpText>
    <label>Transaction Point Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>