force-app/main/default/objects/Message__c/fields/Trigger_Marketing_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Marketing_Cloud__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOR SYSTEM USE ONLY. Indicates if a marketing cloud action is needed and thus triggered off this message record.</description>
    <inlineHelpText>FOR SYSTEM USE ONLY. Indicates if a marketing cloud action is needed and thus triggered off this message record.</inlineHelpText>
    <label>Trigger Marketing Cloud</label>
    <type>Checkbox</type>
</CustomField>