force-app/main/default/objects/Message__c/fields/Viewed_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Viewed_Datetime__c</fullName>
    <description>The datetime this message was viewed</description>
    <label>Viewed Datetime</label>
    <type>DateTime</type>
</CustomField>