force-app/main/default/objects/Message__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Donor__c</columns>
    <columns>Visit__c</columns>
    <columns>Viewed_Datetime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>